--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -99,12 +100,24 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/popper.js/dist/umd/popper.min.js", 
+                "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              
+              
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "248daca5-9c7e-48f6-b1fa-ba065698572c"
   }
 }
